# quero-ser

./: .eslintrc.js  .gitignore  .project  Algoritimo_BatalhaNaval  Algoritimo_JokenPO  Algoritimo_Troco  Anagrama.h  App.js  BetweenLetters.js  Bissexto  Bissexto.sln  BrenoNobre-C-CaixaEletronico  BrenoNobre-Python-Jokenpo  BrenoNobre-Python_FizzBuzz  BuracosNasLetras.java  CAIXA  CMakeLists.txt  Caixa Eletronico  Caixa eletronico.py  CaixaEletronico.java  CaixaEletronico.js  CaixaEletronico.py  CalcularExpressão.java  CampoMinado.java  Caso_2.sln  Consideracoes.txt  DIVERGENCIAS.TXT  DependenciasTransitivas.java  Desafio_QueroSer.ipynb  DesafiosIntelitrader.sln  DescobrindoASomaDeVariosNumeros.cpp  Descubra o assassino.js  DescubraAssassino.java  Diamantes.js  DojoPuzzles.md  Encontre o telefone.py  Estatistica  FIZZ  FatoresPrimos.js  FizBuzz.java  (+146 more)
 SpecDrivenDevelopment/: PromptEstruturadoSDD.MD  SDDLivroOfertas.MD  SDDPonteiros.MD  SDDZap.MD  SDDcriptografia.MD
1-Desafio_Jokenpo/: jokenpo.js
2-Desafio_Caixa_Eletronico/: caixaEletronico.js
3-Desafio_FizzBuzz/: fizzBuzz.js
Anagrama-3/: anagramas.py  testeanagrama.py
AnoBissexto/: index.js
Autores Livro/: autores.py  teste_autores.py
Bissexto/: Program.cs
BuracoNasLetras/: Program.cs
Buracos/: Program.cs
CHEQUE POR EXTENSO - em java/: .project  NumeroExtenso.java  setupflies.xml
CONTANDO LETRA DOS NUMEROS - em c++/: Makefile.win  contando letra dos numeros.dev  contando letra dos numeros.layout  contaodor de letras.cpp
Caixa/: main.py  (+3 more)
Caixa Eletrônico/: .project  Caixa Eletrônico.sln  index.html
(+1551 files in other folders)
